# GPRcpp

./: .gitignore  CMakeLists.txt  README.md  changelog.md  setup.py  update_to_pyGPR.txt
include/gpr_math/: distance.h
include/gprs/: exact_gpr.h  gpr.h  sparse_gpr.h  variational_gpr.h
include/kernels/: constant_kernel.h  kernels.h  product_kernel.h  rbf_kernel.h  sum_kernel.h  white_kernel.h
include/utils/: file_operation.h
src/: gpr_clone.py  gpr_test.cpp  gpr_test.py  gpr_window_test.cpp  gpy_gpr_test_compare.py  gpy_kernel_test_compare.py  kernel_test.cpp  sklearn_kernel_test_compare.py
src/gpr_math/: distance.cpp
src/gprs/: exact_gpr.cpp  gpr.cpp  sparse_gpr.cpp  variational_gpr.cpp
src/kernels/: constant_kernel.cpp  kernels.cpp  product_kernel.cpp  rbf_kernel.cpp  sum_kernel.cpp  white_kernel.cpp
src/utils/: file_operation.cpp
